test/errors/offsets_error/zs/float_error.zs
package float_error;

struct FloatError
{
    float32 offsets[];
offsets[@index]:
    uint32  values[];
};
